phase 1 fatsecret api integration

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ DEV_API_KEY=your-dev-api-key
 # Demo user email (defaults to demo@example.com if not set)
 DEMO_USER_EMAIL=demo@example.com
 
+
+
 # Cron Jobs
 # Secret key for authenticating cron job requests
 CRON_SECRET=your-cron-secret-key
@@ -78,3 +80,29 @@ ENABLE_FATSECRET=true
 FATSECRET_MIN_CONFIDENCE=0.7
 FATSECRET_TIMEOUT_MS=2500
 FATSECRET_REGION=US
+# FatSecret OAuth scopes (space-separated). Required for barcode lookup: "premier barcode"
+# Default: "premier"
+FATSECRET_SCOPE="premier barcode"
+# FatSecret barcode lookup region (2-letter ISO-style code)
+# Use a 2-letter region code (US, UK, DE, FR, AU, CA, SG, etc.)
+# Default: "US"
+FATSECRET_BARCODE_REGION=US
+# FatSecret strict mode (default: true)
+# When true: only use FatSecret results if confidence >= FATSECRET_MIN_CONFIDENCE
+# When false: accept any FatSecret result with confidence >= 0.4 (do not treat as fallback)
+# Recommendation: Set to false for dev/testing to maximize FatSecret usage and improve coverage
+# Note: The search pipeline includes synonym expansion (e.g., "almond flour" -> "almond meal"), 
+# singular forms, and ultra-generic fallbacks (including final "noun only" queries) for pantry staples.
+# Update INGREDIENT_SYNONYMS in map-ingredient.ts if you add more pantry categories.
+# In eval mode (fatsecret/hybrid), P@1 now treats high-confidence (>= 0.8) FatSecret matches as hits
+# even if names differ, avoiding false negatives from different naming conventions.
+FATSECRET_STRICT_MODE=true
+
+# Eval harness mode: local (default), fatsecret, hybrid (fatsecret-first with fallback), or problem
+# Note: npm run eval -- --fatsecret ... still works and forces fatsecret mode for that invocation
+# Use EVAL_MODE=problem to automatically load eval/gold.fatsecret-problem-set.csv (20 rows) for quick sanity checks
+# Tip: For quick testing without hammering the API, use: EVAL_MODE=fatsecret && npm run eval -- eval/gold.fatsecret-problems.csv
+# Quick regression set: eval/gold.fatsecret-problems.csv (20 rows) - use for fast iteration without full API usage
+#   This CSV is automatically used by scripts/fatsecret-problem-debug.ts when no path is provided
+# Warning: Running the full gold.v3.csv eval hits the live FatSecret API extensively (~265 API calls)
+EVAL_MODE=local
