--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "parser:bench": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/parser-bench.ts",
     "eval": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/run.ts",
     "eval:analyze": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register eval/analyze.ts",
+    "fatsecret:barcode": "ts-node --project tsconfig.scripts.json -r tsconfig-paths/register scripts/fatsecret-barcode-smoke.ts",
     "similar:build": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/build-similar.ts",
     "test:fdc-api": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/test-fdc-api.ts",
     "verify:seeding": "ts-node --project tsconfig.scripts.json --transpile-only -r tsconfig-paths/register scripts/verify-seeding.ts",
